--- a/pytorch_getstarted.ipynb
+++ b/pytorch_getstarted.ipynb
@@ -323,35 +323,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = params[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Parameter containing:\\ntensor([[[[-0.0032, -0.2884,  0.1934],\\n          [-0.2924,  0.2555,  0.0155],\\n          [ 0.2796,  0.2962, -0.2466]]],\\n\\n\\n        [[[ 0.2415,  0.1273,  0.1293],\\n          [ 0.1940,  0.1790,  0.2177],\\n          [ 0.2358, -0.0839,  0.3071]]],\\n\\n\\n        [[[ 0.1891,  0.2000,  0.1162],\\n          [ 0.0717,  0.1210, -0.2494],\\n          [ 0.3034, -0.0455,  0.1981]]],\\n\\n\\n        [[[ 0.2080, -0.0486,  0.0419],\\n          [-0.1845, -0.0011,  0.1465],\\n          [ 0.1239, -0.0538, -0.1986]]],\\n\\n\\n        [[[-0.0278,  0.0943,  0.2926],\\n          [-0.3070,  0.3168, -0.0244],\\n          [ 0.0730,  0.0077,  0.1895]]],\\n\\n\\n        [[[-0.0435, -0.0272, -0.0296],\\n          [-0.1941, -0.2457,  0.0320],\\n          [-0.2812, -0.2611,  0.2281]]]], requires_grad=True)'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "repr(p)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -360,15 +331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0270,  0.1041, -0.1182,  0.0681, -0.0702, -0.0923, -0.0845,  0.1088,\n",
-      "         -0.0210,  0.0042]], grad_fn=<AddmmBackward>)\n"
+      "tensor([[-0.0590,  0.0326,  0.0151, -0.0278,  0.0290, -0.0590,  0.0264, -0.0979,\n",
+      "          0.0484,  0.1259]], grad_fn=<AddmmBackward>)\n"
      ]
     }
    ],
@@ -387,20 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[ 0.1903, -0.3203,  0.4022,  ..., -1.2648,  1.3155, -0.2763],\n",
-      "          [ 0.5091, -1.6100, -1.8171,  ...,  2.0692,  0.1607, -0.1866],\n",
-      "          [ 0.0499,  0.3511, -0.4415,  ...,  0.3035,  3.5271,  0.3674],\n",
+      "tensor([[[[-0.2681,  0.4807, -0.6466,  ..., -0.1946, -0.0474,  1.2671],\n",
+      "          [ 0.5506,  0.8510, -0.1146,  ...,  0.6029, -0.2611,  1.2922],\n",
+      "          [ 1.2703, -1.2346, -0.7000,  ...,  1.0226, -0.7621,  0.2494],\n",
       "          ...,\n",
-      "          [ 1.0345, -0.1714, -1.4335,  ...,  0.7592,  0.4028,  0.6199],\n",
-      "          [-0.3137, -0.0210, -0.4815,  ..., -0.0518,  0.2046, -0.2769],\n",
-      "          [-1.7634, -1.0415,  0.6456,  ..., -0.2587, -0.0298,  0.8212]]]])\n"
+      "          [ 1.9969,  0.5349, -0.8191,  ..., -0.8485,  0.3072, -0.1953],\n",
+      "          [-0.3355, -0.7920, -0.0837,  ...,  0.0290,  0.6604,  1.6055],\n",
+      "          [-1.3876,  0.8811, -0.4657,  ..., -0.5167,  0.1634,  0.8793]]]])\n"
      ]
     }
    ],
@@ -410,17 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0270,  0.1041, -0.1182,  0.0681, -0.0702, -0.0923, -0.0845,  0.1088,\n",
-       "         -0.0210,  0.0042]], grad_fn=<AddmmBackward>)"
+       "tensor([[-0.0590,  0.0326,  0.0151, -0.0278,  0.0290, -0.0590,  0.0264, -0.0979,\n",
+       "          0.0484,  0.1259]], grad_fn=<AddmmBackward>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +437,7 @@
        "torch.Size([1, 32, 32])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +457,7 @@
        "torch.Size([1, 1, 32, 32])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,17 +468,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0209,  0.1042, -0.1215,  0.0354, -0.0676, -0.0959, -0.0522,  0.0996,\n",
-       "         -0.0114, -0.0009]], grad_fn=<AddmmBackward>)"
+       "tensor([[-0.0408,  0.0480,  0.0079,  0.0126,  0.0540, -0.0716,  0.0116, -0.0941,\n",
+       "          0.0815,  0.1049]], grad_fn=<AddmmBackward>)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,17 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.5903,  0.6047,  0.7664,  0.5518, -0.3725,  1.2649, -0.6915, -1.5780,\n",
-       "         0.0733,  0.2612])"
+       "tensor([ 0.4007,  0.7389,  2.0597,  0.2588, -0.4709,  0.9864, -0.1973, -0.4430,\n",
+       "        -0.7187,  0.8494])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +561,7 @@
        "torch.Size([10])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,17 +582,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.5903,  0.6047,  0.7664,  0.5518, -0.3725,  1.2649, -0.6915, -1.5780,\n",
-       "          0.0733,  0.2612]])"
+       "tensor([[ 0.4007,  0.7389,  2.0597,  0.2588, -0.4709,  0.9864, -0.1973, -0.4430,\n",
+       "         -0.7187,  0.8494]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +612,7 @@
        "torch.Size([1, 10])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,17 +640,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0270,  0.1041, -0.1182,  0.0681, -0.0702, -0.0923, -0.0845,  0.1088,\n",
-       "         -0.0210,  0.0042]], grad_fn=<AddmmBackward>)"
+       "tensor([[-0.0590,  0.0326,  0.0151, -0.0278,  0.0290, -0.0590,  0.0264, -0.0979,\n",
+       "          0.0484,  0.1259]], grad_fn=<AddmmBackward>)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,14 +679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6870, grad_fn=<MseLossBackward>)\n"
+      "tensor(0.7597, grad_fn=<MseLossBackward>)\n"
      ]
     }
    ],
@@ -726,18 +697,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<MseLossBackward object at 0x7f2ace1db9e8>\n",
-      "<AddmmBackward object at 0x7f2ace1dba20>\n",
-      "<AccumulateGrad object at 0x7f2ace1db9e8>\n",
-      "<ReluBackward0 object at 0x7f2ace1dba90>\n",
-      "<TBackward object at 0x7f2ace1dba58>\n"
+      "<MseLossBackward object at 0x7fe53dbecdd8>\n",
+      "<AddmmBackward object at 0x7fe53dbece80>\n",
+      "<AccumulateGrad object at 0x7fe53dbecdd8>\n",
+      "<ReluBackward0 object at 0x7fe53dbecef0>\n",
+      "<TBackward object at 0x7fe53dbeceb8>\n"
      ]
     }
    ],
@@ -752,14 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((<AddmmBackward object at 0x7f2ace1d8e80>, 0),)\n"
+      "((<AddmmBackward object at 0x7fe53dbe8c18>, 0),)\n"
      ]
     }
    ],
@@ -776,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +757,7 @@
       "conv1.bias.grad before backward\n",
       "tensor([0., 0., 0., 0., 0., 0.])\n",
       "conv1.bias.grad after backward\n",
-      "tensor([ 0.0019,  0.0030,  0.0087,  0.0046, -0.0154, -0.0070])\n"
+      "tensor([ 0.0097, -0.0107, -0.0066,  0.0141, -0.0073, -0.0014])\n"
      ]
     }
    ],
@@ -804,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +784,7 @@
        "torch.Size([16, 6, 3, 3])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +804,7 @@
        "torch.Size([16, 6, 3, 3])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +824,7 @@
        "torch.Size([16])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,12 +851,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create your optimizer\n",
     "optimizer = optim.SGD(net.parameters(), lr=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Implements stochastic gradient descent (optionally with momentum).\n",
+      "\n",
+      "    Nesterov momentum is based on the formula from\n",
+      "    `On the importance of initialization and momentum in deep learning`__.\n",
+      "\n",
+      "    Args:\n",
+      "        params (iterable): iterable of parameters to optimize or dicts defining\n",
+      "            parameter groups\n",
+      "        lr (float): learning rate\n",
+      "        momentum (float, optional): momentum factor (default: 0)\n",
+      "        weight_decay (float, optional): weight decay (L2 penalty) (default: 0)\n",
+      "        dampening (float, optional): dampening for momentum (default: 0)\n",
+      "        nesterov (bool, optional): enables Nesterov momentum (default: False)\n",
+      "\n",
+      "    Example:\n",
+      "        >>> optimizer = torch.optim.SGD(model.parameters(), lr=0.1, momentum=0.9)\n",
+      "        >>> optimizer.zero_grad()\n",
+      "        >>> loss_fn(model(input), target).backward()\n",
+      "        >>> optimizer.step()\n",
+      "\n",
+      "    __ http://www.cs.toronto.edu/%7Ehinton/absps/momentum.pdf\n",
+      "\n",
+      "    .. note::\n",
+      "        The implementation of SGD with Momentum/Nesterov subtly differs from\n",
+      "        Sutskever et. al. and implementations in some other frameworks.\n",
+      "\n",
+      "        Considering the specific case of Momentum, the update can be written as\n",
+      "\n",
+      "        .. math::\n",
+      "                  v = \\rho * v + g \\\\\n",
+      "                  p = p - lr * v\n",
+      "\n",
+      "        where p, g, v and :math:`\\rho` denote the parameters, gradient,\n",
+      "        velocity, and momentum respectively.\n",
+      "\n",
+      "        This is in contrast to Sutskever et. al. and\n",
+      "        other frameworks which employ an update of the form\n",
+      "\n",
+      "        .. math::\n",
+      "             v = \\rho * v + lr * g \\\\\n",
+      "             p = p - v\n",
+      "\n",
+      "        The Nesterov version is analogously modified.\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(optim.SGD.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the input of pytorch optimizer includes a parameter iterator `net.paramters()`."
    ]
   },
   {
@@ -897,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,18 +947,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([ 0.1756,  0.0457,  0.0422,  0.1254, -0.1126,  0.0537],\n",
+       "tensor([-0.2270, -0.2612, -0.0787,  0.2637, -0.0495,  0.1804],\n",
        "       requires_grad=True)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +978,7 @@
        "tensor([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,18 +1005,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([ 0.1756,  0.0457,  0.0422,  0.1254, -0.1126,  0.0537],\n",
+       "tensor([-0.2270, -0.2612, -0.0787,  0.2637, -0.0495,  0.1804],\n",
        "       requires_grad=True)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,16 +1027,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.0019,  0.0030,  0.0087,  0.0046, -0.0154, -0.0070])"
+       "tensor([ 0.0097, -0.0107, -0.0066,  0.0141, -0.0073, -0.0014])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,18 +1070,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([ 0.1570,  0.0157, -0.0448,  0.0790,  0.0409,  0.1240],\n",
+       "tensor([-0.3237, -0.1547, -0.0128,  0.1222,  0.0238,  0.1943],\n",
        "       requires_grad=True)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,16 +1092,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.0019,  0.0030,  0.0087,  0.0046, -0.0154, -0.0070])"
+       "tensor([ 0.0097, -0.0107, -0.0066,  0.0141, -0.0073, -0.0014])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,13 +1116,6 @@
    "source": [
     "The parameters are updated and the gradients stay the same."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
