--- a/pytorch_getstarted.ipynb
+++ b/pytorch_getstarted.ipynb
@@ -338,8 +338,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0590,  0.0326,  0.0151, -0.0278,  0.0290, -0.0590,  0.0264, -0.0979,\n",
-      "          0.0484,  0.1259]], grad_fn=<AddmmBackward>)\n"
+      "tensor([[-0.1815, -0.1309,  0.0471, -0.0538, -0.0047,  0.1005, -0.0198,  0.0073,\n",
+      "         -0.0111,  0.0609]], grad_fn=<AddmmBackward>)\n"
      ]
     }
    ],
@@ -365,13 +365,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[-0.2681,  0.4807, -0.6466,  ..., -0.1946, -0.0474,  1.2671],\n",
-      "          [ 0.5506,  0.8510, -0.1146,  ...,  0.6029, -0.2611,  1.2922],\n",
-      "          [ 1.2703, -1.2346, -0.7000,  ...,  1.0226, -0.7621,  0.2494],\n",
+      "tensor([[[[ 0.9638, -1.8740,  0.9441,  ...,  1.3390,  1.8885,  1.7149],\n",
+      "          [ 2.6380,  0.1047, -1.4288,  ...,  0.8446, -1.1593, -1.9627],\n",
+      "          [-0.5843, -2.0618,  0.0463,  ...,  1.8293, -0.6651, -1.0938],\n",
       "          ...,\n",
-      "          [ 1.9969,  0.5349, -0.8191,  ..., -0.8485,  0.3072, -0.1953],\n",
-      "          [-0.3355, -0.7920, -0.0837,  ...,  0.0290,  0.6604,  1.6055],\n",
-      "          [-1.3876,  0.8811, -0.4657,  ..., -0.5167,  0.1634,  0.8793]]]])\n"
+      "          [ 0.0311,  1.0929, -0.4621,  ...,  0.6354, -0.8600, -0.4620],\n",
+      "          [ 0.4887,  1.1035,  0.1545,  ...,  0.2693,  1.5456,  0.7081],\n",
+      "          [-0.9061,  0.3992, -0.3586,  ...,  2.6215, -2.0805,  1.1064]]]])\n"
      ]
     }
    ],
@@ -387,8 +387,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0590,  0.0326,  0.0151, -0.0278,  0.0290, -0.0590,  0.0264, -0.0979,\n",
-       "          0.0484,  0.1259]], grad_fn=<AddmmBackward>)"
+       "tensor([[-0.1815, -0.1309,  0.0471, -0.0538, -0.0047,  0.1005, -0.0198,  0.0073,\n",
+       "         -0.0111,  0.0609]], grad_fn=<AddmmBackward>)"
       ]
      },
      "execution_count": 13,
@@ -474,8 +474,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0408,  0.0480,  0.0079,  0.0126,  0.0540, -0.0716,  0.0116, -0.0941,\n",
-       "          0.0815,  0.1049]], grad_fn=<AddmmBackward>)"
+       "tensor([[-0.1754, -0.1297,  0.0308, -0.0353, -0.0263,  0.0791, -0.0063,  0.0201,\n",
+       "         -0.0264,  0.0663]], grad_fn=<AddmmBackward>)"
       ]
      },
      "execution_count": 17,
@@ -537,8 +537,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.4007,  0.7389,  2.0597,  0.2588, -0.4709,  0.9864, -0.1973, -0.4430,\n",
-       "        -0.7187,  0.8494])"
+       "tensor([-1.3975,  0.3668,  0.2771,  0.6223, -0.5284, -0.0131,  1.0155, -0.1614,\n",
+       "         0.8480, -1.0656])"
       ]
      },
      "execution_count": 21,
@@ -588,8 +588,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.4007,  0.7389,  2.0597,  0.2588, -0.4709,  0.9864, -0.1973, -0.4430,\n",
-       "         -0.7187,  0.8494]])"
+       "tensor([[-1.3975,  0.3668,  0.2771,  0.6223, -0.5284, -0.0131,  1.0155, -0.1614,\n",
+       "          0.8480, -1.0656]])"
       ]
      },
      "execution_count": 24,
@@ -646,8 +646,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0590,  0.0326,  0.0151, -0.0278,  0.0290, -0.0590,  0.0264, -0.0979,\n",
-       "          0.0484,  0.1259]], grad_fn=<AddmmBackward>)"
+       "tensor([[-0.1815, -0.1309,  0.0471, -0.0538, -0.0047,  0.1005, -0.0198,  0.0073,\n",
+       "         -0.0111,  0.0609]], grad_fn=<AddmmBackward>)"
       ]
      },
      "execution_count": 27,
@@ -686,7 +686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.7597, grad_fn=<MseLossBackward>)\n"
+      "tensor(0.5631, grad_fn=<MseLossBackward>)\n"
      ]
     }
    ],
@@ -704,11 +704,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<MseLossBackward object at 0x7fe53dbecdd8>\n",
-      "<AddmmBackward object at 0x7fe53dbece80>\n",
-      "<AccumulateGrad object at 0x7fe53dbecdd8>\n",
-      "<ReluBackward0 object at 0x7fe53dbecef0>\n",
-      "<TBackward object at 0x7fe53dbeceb8>\n"
+      "<MseLossBackward object at 0x7ff7b92aa748>\n",
+      "<AddmmBackward object at 0x7ff7b92aa710>\n",
+      "<AccumulateGrad object at 0x7ff7b92aa7f0>\n",
+      "<ReluBackward0 object at 0x7ff7b92aa828>\n",
+      "<TBackward object at 0x7ff7b92aa710>\n"
      ]
     }
    ],
@@ -730,7 +730,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((<AddmmBackward object at 0x7fe53dbe8c18>, 0),)\n"
+      "((<AddmmBackward object at 0x7ff7b92a6b00>, 0),)\n"
      ]
     }
    ],
@@ -757,7 +757,7 @@
       "conv1.bias.grad before backward\n",
       "tensor([0., 0., 0., 0., 0., 0.])\n",
       "conv1.bias.grad after backward\n",
-      "tensor([ 0.0097, -0.0107, -0.0066,  0.0141, -0.0073, -0.0014])\n"
+      "tensor([ 0.0026, -0.0185, -0.0051, -0.0121,  0.0024, -0.0050])\n"
      ]
     }
    ],
@@ -954,7 +954,7 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([-0.2270, -0.2612, -0.0787,  0.2637, -0.0495,  0.1804],\n",
+       "tensor([ 0.0837,  0.0693,  0.0922,  0.1638, -0.1689, -0.2779],\n",
        "       requires_grad=True)"
       ]
      },
@@ -991,7 +991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perform back propogation"
+    "## Perform back propogation"
    ]
   },
   {
@@ -1012,7 +1012,7 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([-0.2270, -0.2612, -0.0787,  0.2637, -0.0495,  0.1804],\n",
+       "tensor([ 0.0837,  0.0693,  0.0922,  0.1638, -0.1689, -0.2779],\n",
        "       requires_grad=True)"
       ]
      },
@@ -1033,7 +1033,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.0097, -0.0107, -0.0066,  0.0141, -0.0073, -0.0014])"
+       "tensor([ 0.0026, -0.0185, -0.0051, -0.0121,  0.0024, -0.0050])"
       ]
      },
      "execution_count": 44,
@@ -1056,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Update the paramters"
+    "## Update the paramters"
    ]
   },
   {
@@ -1077,7 +1077,7 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([-0.3237, -0.1547, -0.0128,  0.1222,  0.0238,  0.1943],\n",
+       "tensor([ 0.0578,  0.2546,  0.1434,  0.2850, -0.1924, -0.2279],\n",
        "       requires_grad=True)"
       ]
      },
@@ -1098,7 +1098,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.0097, -0.0107, -0.0066,  0.0141, -0.0073, -0.0014])"
+       "tensor([ 0.0026, -0.0185, -0.0051, -0.0121,  0.0024, -0.0050])"
       ]
      },
      "execution_count": 47,
